# embedded-pcf

./: Cargo.toml  README.md
examples/: cjk.rs  embedded_text.rs  world_hello.rs
src/: draw_target.rs  lib.rs  parser.rs  pcf.rs  style.rs  utils.rs
test-fonts/: README.md  fusion-pixel-12px-monospaced-zh_hans.pcf  fusion-pixel-12px-proportional-zh_hans-pad_to_int.pcf  fusion-pixel-12px-proportional-zh_hans.pcf
