[package]
name = "embedded-pcf"
description = "X11 Portable Compiled Font adapter for embedded-graphics"
version = "0.1.0"
edition = "2021"
exclude = [
    "/test-fonts",
    "/.gitignore",
    "/screenshots",
]

[dependencies]
az = "1.2.1"
embedded-graphics = "0.8.1"
num_enum = { version = "0.7.3", default-features = false }

[features]
default = ["std"]
std = []

[dev-dependencies]
embedded-graphics-simulator = "0.6.0"
